<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_common_config</name>
  <version>0.0.0</version>
  <description>Common MoveIt configuration files for robotic arms</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>rviz2</depend>
  <depend>controller_manager</depend>
  <depend>warehouse_ros_mongo</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_teleop</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 